# learn-codex

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.agents/: README.md
.agents/skills/context-budget/: SKILL.md
.agents/skills/data-analysis/: SKILL.md
.agents/skills/semi-ui-skills/: SKILL.md
.codex/: config.toml
.codex/agents/: README.md  architect.toml  code-reviewer.toml  database-reviewer.toml  performance-optimizer.toml  planner.toml  python-reviewer.toml  typescript-reviewer.toml
.codex/rules/: README.md  default.rules  security.rules
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agents/: architect.md  code-reviewer.md  database-reviewer.md  performance-optimizer.md  planner.md  python-reviewer.md  typescript-reviewer.md
backend/: AGENTS.md
backend/src/backend_service/: config.py  main.py
backend/tests/: test_config.py
contexts/: README.md
docs/: architecture.md  codex-official-playbook.md  coding-standards.md  runbook.md  stack-structure.md
frontend/: AGENTS.md  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
infra/: AGENTS.md
infra/mysql/: docker-compose.yml
infra/mysql/init/: 001_init.sql
scripts/: bootstrap.sh  check.sh  check_codex_wiring.sh  db_local_check.sh  mysql_up.sh  run.sh
specs/000-template/: acceptance.md  prd.md  tasks.md
