[project]
name = "python-mysql-react-semi-starter"
version = "0.1.0"
description = "Codex-aligned starter for Python + MySQL + React + Semi Design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend/src"]
addopts = "-q"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src", "backend/tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/backend_service"]
